err/ngcloud.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/ngcloud'...
Listing './lib/python3.5/site-packages/ngcloud/pipe'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/css'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/grey'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/img'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/vendor'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/vendor/bootstrap-3.1.1'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/vendor/d3-3.4.11'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/static/vendor/jquery-2.1.1'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/templates'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/shared/templates/includes'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/tuxedo'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/tuxedo/static'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/tuxedo/static/css'...
Listing './lib/python3.5/site-packages/ngcloud/pipe/report/tuxedo/templates'...
Listing './lib/python3.5/site-packages/ngcloud-0.3.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
